--- a/engines/attendance/app/views/attendance/documents/_form.html.haml
+++ b/engines/attendance/app/views/attendance/documents/_form.html.haml
@@ -1,124 +1,122 @@
-= simple_form_for @ticket, url: update_document_path(@ticket), method: :put, multipart: true, html: {id: 'file-validation'} do |f|
+= simple_form_for @ticket, url: ticket_document_path(@ticket), method: :put, multipart: true, html: {id: 'file-validation'} do |f|
  
   
-  - if @service.nothing_required?
-    .column.text-center
-      %h3 Não é necessário enviar documentação.
-  - else
-    - if @service.is_required? :certificate_born_uploads
-      .column 
-        %label 
-          %b Certidão de Nascimento ou de Casamento, quando for o caso (nos casos de convivência marital trazes as certidões de nascimento de ambos)
-      .divider
-      .column 
-        = f.fields_for :certificate_born_uploads do |builder|
-          = render 'certificate_born_upload_fields', f: builder
-        = link_to_add_fields "Adicionar arquivo", f, :certificate_born_uploads
-      %hr/
-   
-    - if @service.is_required? :rg_uploads
-      .column 
-        %label 
-          %b Comprovante de identidade
-      .divider
-      .column 
-        = f.fields_for :rg_uploads do |builder|
-          = render 'rg_upload_fields', f: builder
-        = link_to_add_fields "Adicionar arquivo", f, :rg_uploads
-      %hr/
-   
-    - if @service.is_required? :cpf_uploads
-      .column 
-        %label 
-          %b Comprovante de CPF
-      .divider
-      .column 
-        = f.fields_for :cpf_uploads do |builder|
-          = render 'cpf_upload_fields', f: builder
-        = link_to_add_fields "Adicionar arquivo", f, :cpf_uploads
-      %hr/
+  - if @service.document_is_required? :certificate_born_uploads
+    .column 
+      %label 
+        %b Certidão de Nascimento ou de Casamento, quando for o caso (nos casos de convivência marital trazes as certidões de nascimento de ambos)
+    .divider
+    .column 
+      = f.fields_for :certificate_born_uploads do |builder|
+        = render 'certificate_born_upload_fields', f: builder
+      = link_to_add_fields "Adicionar arquivo", f, :certificate_born_uploads
+    %hr/
+ 
+  - if @service.document_is_required? :rg_uploads
+    .column 
+      %label 
+        %b Comprovante de identidade
+    .divider
+    .column 
+      = f.fields_for :rg_uploads do |builder|
+        = render 'rg_upload_fields', f: builder
+      = link_to_add_fields "Adicionar arquivo", f, :rg_uploads
+    %hr/
+ 
+  - if @service.document_is_required? :cpf_uploads
+    .column 
+      %label 
+        %b Comprovante de CPF
+    .divider
+    .column 
+      = f.fields_for :cpf_uploads do |builder|
+        = render 'cpf_upload_fields', f: builder
+      = link_to_add_fields "Adicionar arquivo", f, :cpf_uploads
+    %hr/
 
 
-    - if @service.is_required? :residence_uploads
-      .column 
-        %label 
-          %b Comprovante de Residência no DF, últimos 5 anos (ano a ano)
-      .divider
-      .column 
-        = f.fields_for :residence_uploads do |builder|
-          = render 'residence_upload_fields', f: builder
-        = link_to_add_fields "Adicionar arquivo", f, :residence_uploads
-      %hr/
+  - if @service.document_is_required? :residence_uploads
+    .column 
+      %label 
+        %b Comprovante de Residência no DF, últimos 5 anos (ano a ano)
+    .divider
+    .column 
+      = f.fields_for :residence_uploads do |builder|
+        = render 'residence_upload_fields', f: builder
+      = link_to_add_fields "Adicionar arquivo", f, :residence_uploads
+    %hr/
 
 
-    - if @service.is_required? :arrival_df_uploads
-      .column 
-        %label 
-          %b Comprovante de tempo no DF (chegada ao DF)
-      .divider
-      .column 
-        = f.fields_for :arrival_df_uploads do |builder|
-          = render 'arrival_df_upload_fields', f: builder
-        = link_to_add_fields "Adicionar arquivo", f, :arrival_df_uploads
-      %hr/
+  - if @service.document_is_required? :arrival_df_uploads
+    .column 
+      %label 
+        %b Comprovante de tempo no DF (chegada ao DF)
+    .divider
+    .column 
+      = f.fields_for :arrival_df_uploads do |builder|
+        = render 'arrival_df_upload_fields', f: builder
+      = link_to_add_fields "Adicionar arquivo", f, :arrival_df_uploads
+    %hr/
 
 
-    - if @service.is_required? :registry_uploads
-      .column 
-        %label 
-          %b Certidões Negativas de todos os Cartórios de Registro de Imóveis do DF
-      .divider
-      .column 
-        = f.fields_for :registry_uploads do |builder|
-          = render 'registry_upload_fields', f: builder
-        = link_to_add_fields "Adicionar arquivo", f, :registry_uploads
-      %hr/
+  - if @service.document_is_required? :registry_uploads
+    .column 
+      %label 
+        %b Certidões Negativas de todos os Cartórios de Registro de Imóveis do DF
+    .divider
+    .column 
+      = f.fields_for :registry_uploads do |builder|
+        = render 'registry_upload_fields', f: builder
+      = link_to_add_fields "Adicionar arquivo", f, :registry_uploads
+    %hr/
 
-    - if @service.is_required? :payment_uploads
-      .column 
-        %label 
-          %b Comprovante de pagamento da taxa de abetura de processo (R$ 47,83)
-      .divider
-      .column 
-        = f.fields_for :payment_uploads do |builder|
-          = render 'payment_upload_fields', f: builder
-        = link_to_add_fields "Adicionar arquivo", f, :payment_uploads
-      %hr/
+  - if @service.document_is_required? :payment_uploads
+    .column 
+      %label 
+        %b Comprovante de pagamento da taxa de abetura de processo (R$ 47,83)
+    .divider
+    .column 
+      = f.fields_for :payment_uploads do |builder|
+        = render 'payment_upload_fields', f: builder
+      = link_to_add_fields "Adicionar arquivo", f, :payment_uploads
+    %hr/
 
 
 
-    - if @service.is_required? :certificate_born_uploads
-      .column 
-        %label 
-          %b Certidão de nascimento dos filhos e demais dependentes legais e CPF se a idade for maior ou igual a 14 anos
-      .divider
-      .column 
-        = f.fields_for :certificate_born_uploads do |builder|
-          = render 'certificate_born_upload_fields', f: builder
-        = link_to_add_fields "Adicionar arquivo", f, :certificate_born_uploads
-      %hr/
+  - if @service.document_is_required? :certificate_born_uploads
+    .column 
+      %label 
+        %b Certidão de nascimento dos filhos e demais dependentes legais e CPF se a idade for maior ou igual a 14 anos
+    .divider
+    .column 
+      = f.fields_for :certificate_born_uploads do |builder|
+        = render 'certificate_born_upload_fields', f: builder
+      = link_to_add_fields "Adicionar arquivo", f, :certificate_born_uploads
+    %hr/
 
-    - if @service.is_required? :income_uploads
-      .column 
-        %label 
-          %b Comprovantes de renda 
-      .divider
-      .column 
-        = f.fields_for :income_uploads do |builder|
-          = render 'income_upload_fields', f: builder
-        = link_to_add_fields "Adicionar arquivo", f, :income_uploads
-      %hr/
-    - if @service.is_required? :special_condition_uploads
-      .column 
-        %label 
-          %b Comprovantes de necessidades especiais
-      .divider
-      .column 
-        = f.fields_for :special_condition_uploads do |builder|
-          = render 'special_condition_upload_fields', f: builder
-        = link_to_add_fields "Adicionar arquivo", f, :special_condition_uploads
-      %hr/
+  - if @service.document_is_required? :income_uploads
+    .column 
+      %label 
+        %b Comprovantes de renda 
+    .divider
+    .column 
+      = f.fields_for :income_uploads do |builder|
+        = render 'income_upload_fields', f: builder
+      = link_to_add_fields "Adicionar arquivo", f, :income_uploads
+    %hr/
+  - if @service.document_is_required? :special_condition_uploads
+    .column 
+      %label 
+        %b Comprovantes de necessidades especiais
+    .divider
+    .column 
+      = f.fields_for :special_condition_uploads do |builder|
+        = render 'special_condition_upload_fields', f: builder
+      = link_to_add_fields "Adicionar arquivo", f, :special_condition_uploads
+    %hr/
   .big-divider
-  .field.text-center
-    = f.submit "Enviar documentação", class: 'ui button yellow'
+  .column.text-center
+    = f.submit "Enviar documentação", class: 'ui button yellow fluid'
+    .divider
+    = link_to "Cancelar", ticket_path(@ticket), class: 'ui button gray fluid'
     
