--- a/engines/attendance/app/views/attendance/tickets/show.html.haml
+++ b/engines/attendance/app/views/attendance/tickets/show.html.haml
@@ -1,52 +1,96 @@
-.big-divider
 .ui.grid
-  .column.text-center
-    .big-divider
-    .title-header 
-      Detalhamento de atualização
-      %small
-    .big-divider
-.row
-  .column
-    %table.ui.celled.table
-      %tbody.text-center
-        %tr
-          %td    
-            %h3 Protocolo - nº #{@ticket.id} 
-            = @ticket.ticket_context.name.humanize rescue "Sem informação"
-            = @ticket.created_at.strftime("%d/%m/%Y - %H:%M") rescue "Sem informação"
-          %td
-            %span.ui.label.blue
-              %p= @ticket.ticket_status.name.humanize rescue "Sem informação"
-        - if @ticket.ticket_status_id == 1
+  .two.wide.mobile.column
+    %a{href: "#{attendance.new_context_path}"}
+      %i.big.arrow.left.icon
+  .thirteen.wide.mobile.column.text-center
+    .title-header Detalhamento de atualização
+    .sub-title Resumo de solicitação de atualização
+.big-divider
+.ui.grid.container-fluid
+  .row
+    .column
+      %table.ui.celled.table
+        %thead
+          %tr 
+            %td.text-center 
+              %h4 Detalhamento
+        %tbody
+          %tr 
+            %td
+            %td
+              %b Nº do atendimento
+              %p #{@ticket.protocol}
+            %td 
+              %b Tipo de atendimento
+              %p #{@ticket.ticket_context.name.humanize}
+            %td
+              %b Situação
+              %p #{@ticket.ticket_status.name.humanize}
+            %td 
+              %b Criado em 
+              %p #{@ticket.created_at.strftime('%d/%m/%Y às %H:%M')}
+.ui.grid.container-fluid
+  .row
+    .column
+      %table.ui.celled.table
+        %thead
           %tr
-            %td= link_to "Continuar atualização", continue_tickets_path(@ticket)
-          %tr
-            %td= link_to "Cancelar atualização", cancel_tickets_path(@ticket), remote: true, class: 'link-red'
-        - elsif !([2,5,6,7].include? @ticket.ticket_status_id)
-          %tr
-            %td.text-without-bold 
-              %i Aguarde o retorno da CODHAB.
-        - else
-          %tr
-            %td.text-without-bold 
-              %i Atualização finalizada.
-  .big-divider
-  .column
-    %table.ui.celled.table
-      %tbody
-        %tr.text-center
-          %td    
-            %h3 Mensagens
-        - if @ticket.ticket_comments.present?
-          - @ticket.ticket_comments.order("created_at DESC").each do |item|
+            %th Ações
+        %tbody
+          - if @ticket.enable_to_update?
             %tr
-              %td.text-without-bold 
-                %small
-                  %b= item.created_at.strftime("%d/%m/%Y - %H:%M")
-                %p= item.comment
-        - else 
-          %tr.text-center
-            %td.text-without-bold
-              %i Nenhuma mensagem para mostrar
-  .big-divider
+              %td
+                %a.ui.button.yellow.fluid{href: "#{@ticket.link_to_context(:edit_data)}"}
+                  %i.icon.edit.big.vertical-text 
+                  Atualizar dados 
+              %td
+                %a.ui.button.red.fluid{href: "#{@ticket.link_to_context(:cancel)}", data: { remote: true}}
+                  %i.icon.remove.big.vertical-text 
+                  Cancelar atualização
+          - else 
+            %tr
+              %td
+              %td.text-center
+                - if @ticket.waiting_codhab_return?
+                  %p Aguarde o retorno da CODHAB
+                %p Nenhuma ação a ser aplicada
+
+  .row
+    .column
+      %table.ui.celled.table
+        %thead
+          %tr 
+            %td.text-center 
+              %h4 Interações / Mensagens (#{@ticket.ticket_comments.count})
+        %tbody
+          - if @ticket.ticket_comments.present?
+            - @ticket.ticket_comments.each do |message|
+              %tr
+                %td
+          - else
+            %tr
+              %td 
+              %td.text-center 
+                %i Nenhuma mensagem para mostrar.
+
+  .row
+    .column
+      %table.ui.celled.table
+        %thead
+          %tr 
+            %td.text-center 
+              %h4 Documentos enviados (#{@ticket.ticket_uploads.count})
+        %tbody
+          - if @ticket.ticket_uploads.present?
+            - @ticket.ticket_uploads.each do |upload|
+              %tr
+                %td
+                %td
+                  %b Tipo de documento
+                  %p= upload.ticket_upload_category.name
+                  %b= link_to "Visualizar documento", upload.upload_path_url, target: '_blank'
+          - else
+            %tr
+              %td 
+              %td.text-center 
+                %i Nenhum documento enviado.
