--- a/engines/attendance/app/views/attendance/contacts/_form.html.haml
+++ b/engines/attendance/app/views/attendance/contacts/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for @cadastre, url: update_contact_path(@ticket), method: :put, validate: true, remote: true do |f|
+= simple_form_for @cadastre, url: ticket_contact_path(@ticket, @cadastre), method: :put, validate: true, remote: true do |f|
   = f.input :telephone, input_html: { class: 'phone'}
   = f.input :telephone_optional, input_html: { class: 'phone'}
   = f.input :celphone, input_html: { class: 'phone'}
@@ -9,7 +9,8 @@
   = f.input :cep, input_html: { class: 'cep'}
   .big-divider
   .column.text-center
-    = f.submit "Atualizar dados de contato", class: 'ui button yellow'
-    = link_to "Cancelar", "#", class: 'ui button gray'
+    = f.submit "Atualizar dados de contato", class: 'ui button yellow fluid'
+    .divider
+    = link_to "Cancelar", "#", class: 'ui button gray fluid'
  
   
