--- a/engines/attendance/app/views/attendance/dependents/index.html.haml
+++ b/engines/attendance/app/views/attendance/dependents/index.html.haml
@@ -1,28 +1,31 @@
+.ui.grid
+  .one.wide.mobile.column
+    %a{href: "#{ticket_path(@ticket)}"}
+      %i.big.arrow.left.icon
+  .thirteen.wide.mobile.column.text-center
+    .title-header Atualização de contatos
+    .sub-title Formulário de edição de contatos
+
 .big-divider
 .ui.grid.container
-  .column.text-center
-    .title-header 
-      Atualização de dependentes
-      %small
-        %p= link_to "Retonar para página de atualizações", new_ticket_path
-.big-divider
-.row
   .column
-    - if @cadastre_mirror.dependent_mirrors.present? 
-      %table.ui.celled.table
-        %tbody
-          - @cadastre_mirror.dependent_mirrors.each do |mirror|
-            %tr
-              %td
-                %b= link_to mirror.name.mb_chars.upcase, edit_dependent_path(ticket_id: @ticket.id, dependent_id: mirror.id)   
-                %p.text-without-bold
-                  #{mirror.kinship.name.mb_chars.upcase}, #{mirror.born.strftime("%d/%m/%Y")} 
-                = link_to "editar", edit_dependent_path(ticket_id: @ticket.id, dependent_id: mirror.id)
-                = link_to "excluir",remove_dependent_path(ticket_id: @ticket.id, dependent_id: mirror.id), remote: true
-    - else
-      .divider
-      .text-center
-        %i Nenhum dependente cadastrado.
-  .divider
-  .column.text-center
-    = link_to "<i class='add icon'></i>Adicionar dependente".html_safe, new_dependent_path, class: 'ui button yellow'
+    %table.ui.celled.table
+      %tbody
+        - @dependents.each do |dependent|
+          %tr
+            %td
+            %td
+              %h4.ui.image.header
+                %i.icon{class: "#{dependent.special_condition_id == 2 ? 'handicap blue' : 'user'}"}
+                .content
+                  #{dependent.name.titleize}
+                  .sub.header 
+                    %small 
+                      #{dependent.kinship.present? ? dependent.kinship.name : nil}
+                      
+            %td
+              = link_to "Editar", edit_ticket_dependent_path(@ticket, dependent), class: 'ui button green icon mini'
+              = link_to "Remover", ticket_dependent_path(@ticket, dependent), remote: true, class: 'ui button red icon mini'
+
+
+
