--- a/engines/attendance/app/views/attendance/dependents/edit.html.haml
+++ b/engines/attendance/app/views/attendance/dependents/edit.html.haml
@@ -1,12 +1,12 @@
-.big-divider
-.ui.grid.container
-  .column.text-center
-    .title-header 
-      Atualização de dependente
-      %small
-        %p= link_to "Retonar para página de atualizações", new_ticket_path
+.ui.grid
+  .one.wide.mobile.column
+    %a{href: "#{ticket_path(@ticket)}"}
+      %i.big.arrow.left.icon
+  .thirteen.wide.mobile.column.text-center
+    .title-header Atualização de contatos
+    .sub-title Formulário de edição de contatos
 
 .big-divider
 .ui.grid.container
   .column.content-form
-    = render 'update_form'
+    = render 'form'
