--- a/engines/attendance/app/views/attendance/dependents/_pre_destroy.html.haml
+++ b/engines/attendance/app/views/attendance/dependents/_pre_destroy.html.haml
@@ -4,6 +4,6 @@
       %b Você tem certeza que deseja remover este dependente?
 .actions
   .ui.aligned.center.text-center
-    = link_to "Sim, eu desejo remover", destroy_dependent_path(ticket_id: @ticket.id, dependent_mirror_id: @dependent_mirror.id), class: 'ui button green', method: :delete
+    = link_to "Sim, eu desejo remover", ticket_dependent_path(ticket_id: @ticket.id, id: @dependent_mirror.id),  class: 'ui button green', method: :delete
     .ui.grau.deny.button Cancelar
   .divider
