--- a/engines/attendance/app/views/attendance/tickets/show.html.haml
+++ b/engines/attendance/app/views/attendance/tickets/show.html.haml
@@ -57,6 +57,21 @@
                     %i Aguarde o retorno da CODHAB
                 %p 
                   %i Nenhuma ação a ser aplicada
+  
+  - if @ticket.closed_by_codhab?
+    .row
+      .column
+        %table.ui.celled.table
+          %thead
+            %tr
+              %th.text-center Retorno CODHAB
+          %tbody
+            %tr 
+              %td
+              %td.text-center
+                %b= @ticket.ticket_situation
+              %td.text-justify
+                %i= @ticket.supervisor_comment
 
   .row
     .column
@@ -67,14 +82,17 @@
               %h4 Interações / Mensagens (#{@ticket.ticket_comments.count})
         %tbody
           - if @ticket.ticket_comments.present?
-            - @ticket.ticket_comments.each do |message|
-              %tr
-                %td
-          - else
             %tr
-              %td 
-              %td.text-center 
-                %i Nenhuma mensagem para mostrar.
+              %td
+              - @ticket.ticket_comments.order('created_at DESC').each do |message|
+                %td.text-justify
+                  .ui.ribbon.label.yellow #{message.created_at.strftime('%d/%m/%Y')}
+                  %p #{message.comment}
+                  %br/
+          - else 
+            %td
+            %td.text-center 
+              %i Nenhuma mensagem para mostrar.
 
   .row
     .column
