--- a/engines/attendance/app/views/attendance/requeriments/index.html.haml
+++ b/engines/attendance/app/views/attendance/requeriments/index.html.haml
@@ -12,6 +12,5 @@
       %tbody.black
         %tr
           %td
-            %h4.ui.image.header
-              %i.small.user.icon.gray
-              .content
+          %td.text-center
+            %i Nenhum requerimento vínculado ao seu CPF
