--- a/engines/attendance/app/views/attendance/documents/_form.html.haml
+++ b/engines/attendance/app/views/attendance/documents/_form.html.haml
@@ -107,7 +107,7 @@
   - if @service.document_is_required? :special_condition_uploads
     .column 
       %label 
-        %b Comprovantes de necessidades especiais
+        %b Comprovantes da deficiência declarada
     .divider
     .column 
       = f.fields_for :special_condition_uploads do |builder|
