--- a/engines/attendance/app/views/attendance/documents/edit.html.haml
+++ b/engines/attendance/app/views/attendance/documents/edit.html.haml
@@ -1,12 +1,10 @@
+.ui.grid
+  .one.wide.mobile.column
+    = link_to "<i class='big arrow left icon'></i>".html_safe, :back
+  .thirteen.wide.mobile.column.text-center
+    .title-header Envio de documentação
+    .sub-title Formulário de envio de documentação
 .big-divider
-.ui.grid.container
-  .column.text-center
-    .title-header 
-      Envio de documentação
-      %small
-        %p= link_to "Retonar para página anterior", :back
-
-.big-divider
-.ui.grid.container
+.ui.grid.container-fluid
   .column.content-form
     = render 'form'
