--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -46,7 +46,7 @@
         %a{href: "#{attendance.new_context_path}"}
           %i.icon.checkmark.huge.green
       .text-center.bold
-        Habilitação     
+        Habilitação
   .column
     .ui.segment.text-center
       %a{href: "#{attendance.tickets_path}"}
@@ -58,7 +58,7 @@
       %a{href: "#{attendance.chats_path}"}
         %i.icon.comment.outline.huge.gray.text-center.bold
     .text-center.bold
-      Meus Chats
+      Minhas Conversas
   .column{data: { intro: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pulvinar ", position: "top"} }
     .ui.segment.text-center
       %a{href: "#{attendance.requeriments_path}"}
