--- a/engines/attendance/app/views/attendance/chats/show.html.haml
+++ b/engines/attendance/app/views/attendance/chats/show.html.haml
@@ -6,7 +6,7 @@
       %small
         %p= link_to "Retonar para página de chats", chats_path
       %br
-      = link_to "Novo comentário", new_chat_chat_comment_path(@chat), class: 'ui button yellow' 
+      = link_to "Novo comentário", new_chat_chat_comment_path(@chat), class: 'ui button yellow' if @chat.closed == false && @chat.chat_comments.last.candidate == false
 .big-divider
 .ui.container-fluid
   .ui.grid
