--- a/engines/attendance/app/views/attendance/chat_comments/show.html.haml
+++ b/engines/attendance/app/views/attendance/chat_comments/show.html.haml
@@ -1,11 +1,10 @@
-.big-divider
-.ui.grid.container
-  .column.text-center
+.ui.grid
+  .one.wide.mobile.column
+    %a{href: "#{chat_path(@chat)}"}
+      %i.big.arrow.left.icon
+  .thirteen.wide.mobile.column.text-center
     .title-header
-      Comentário do chat
-      %small
-        %p= link_to "Retonar para página de chats", chat_path(@chat)
-
+      Comentário
 .big-divider
 .ui.container-fluid
   .ui.grid
