--- a/engines/attendance/app/views/attendance/chats/new.html.haml
+++ b/engines/attendance/app/views/attendance/chats/new.html.haml
@@ -1,11 +1,10 @@
-.big-divider
-.ui.grid.container
-  .column.text-center
+.ui.grid
+  .one.wide.mobile.column
+    %a{href: "#{chats_path}"}
+      %i.big.arrow.left.icon
+  .thirteen.wide.mobile.column.text-center
     .title-header
-      Novo chat
-      %small
-        %p= link_to "Retonar para página de atualizações", chats_path
-
+      Nova conversa
 .big-divider
 .ui.grid.container
   .column.content-form
