--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -2,7 +2,7 @@
   .column{style: 'width: 25%'}
     = link_to image_tag('/images/no-avatar.jpg', class: 'ui mini circular image big-yellow-border'), cadastre_path(current_cadastre)
   .column{style: 'width: 75%'}
-    .title-header
+    .title-header 
       #{current_cadastre.hello}
       %p.mini-text
         %i Toque para visualizar seu cadastro
@@ -21,7 +21,7 @@
     .ui.segment.text-center
       - if current_cadastre.notifications.unread.present?
         .floating.ui.red.label{style:"top: -0.8em; left: 100%;"}
-          = current_cadastre.notifications.unread.count
+          = current_cadastre.notifications.unread.count 
       %a{href: "#{attendance.notifications_path}"}
         %i.icon.alarm.huge.gray
     .text-center.bold
@@ -46,19 +46,19 @@
         %a{href: "#"}
           %i.icon.checkmark.huge.green
       .text-center.bold
-        Habilitação
+        Habilitação     
   .column
     .ui.segment.text-center
-      %a{href: "#"}
+      %a{href: "#{attendance.tickets_path}"}
         %i.icon.refresh.huge.gray
     .text-center.bold
       Minhas Atualizações
   .column{data: { intro: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pulvinar ", position: "right"} }
     .ui.segment.text-center
-      %a{href: "#"}
+      %a{href: "#{attendance.chats_path}"}
         %i.icon.comment.outline.huge.gray.text-center.bold
     .text-center.bold
-      Minhas Conversas
+      Meus Chats
   .column{data: { intro: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pulvinar ", position: "top"} }
     .ui.segment.text-center
       %a{href: "#{attendance.requeriments_path}"}
